Update English localization in Localizable.strings

--- a/iOS/SwiftiDate/en.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/en.lproj/Localizable.strings
@@ -115,3 +115,19 @@
 "結語" = "Conclusion";
 
 "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。" = "SwiftiDate is like a stage for you to strike up a conversation, giving you the opportunity to meet more high-quality partners. I hope that when you use \"Compliment\" and \"Super like\", you can find your own person just like you are brave enough to strike up a conversation in reality. happiness. ";
+
+"快速註冊新帳號" = "Quick Registration"
+
+"我已有賬號" = "I Have an Account"
+
+"使用手機號碼登入" = "Login with Phone Number"
+
+"以此帳號登錄" = "Continue Account"
+
+"不是你？換個帳號" = "Not You? Switch Account"
+
+"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate will not post on your Facebook"
+
+"服務協議" = "Terms of Service"
+
+"隱私權政策" = "Privacy Policy"
