Update English localization in Localizable.strings

--- a/iOS/SwiftiDate/zh-Hans.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/zh-Hans.lproj/Localizable.strings
@@ -115,3 +115,19 @@
 "結語" = "结语";
 
 "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。" = "SwiftiDate 就像是一个提供给您搭讪的舞台，让您有机会结识更多优质的对象。希望您在运用「赞美」和「超级喜欢」时，能像现实中勇敢搭讪那样，找到属于自己的幸福。 ";
+
+"快速註冊新帳號" = "快速注册新帐号"
+
+"我已有賬號" = "我已有账号"
+
+"使用手機號碼登入" = "使用手机号码登入"
+
+"以此帳號登錄" = "以此帐号登录"
+
+"不是你？換個帳號" = "不是你？换个帐号"
+
+"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate 不会在你的 Facebook 上发文"
+
+"服務協議" = "服务协议"
+
+"隱私權政策" = "隐私权政策"
