--- a/iOS/SwiftiDate/zh-Hant.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/zh-Hant.lproj/Localizable.strings
@@ -115,3 +115,19 @@
 "結語" = "結語";
 
 "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。" = "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。";
+
+"快速註冊新帳號" = "快速註冊新帳號"
+
+"我已有賬號" = "我已有賬號"
+
+"使用手機號碼登入" = "使用手機號碼登入"
+
+"以此帳號登錄" = "以此帳號登錄"
+
+"不是你？換個帳號" = "不是你？換個帳號"
+
+"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate 不會在你的 Facebook 上發文"
+
+"服務協議" = "服務協議"
+
+"隱私權政策" = "隱私權政策"
