--- a/iOS/SwiftiDate/en.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/en.lproj/Localizable.strings
@@ -131,3 +131,23 @@
 "服務協議" = "Terms of Service"
 
 "隱私權政策" = "Privacy Policy"
+
+"你的手機號碼是？" = "What's your phone number?"
+
+"註冊或登錄需要輸入你的手機號碼" = "Registration or login requires entering your phone number"
+
+"請確認你的手機號碼為目前正在使用的手機號碼！" = "Please confirm that your phone number is currently in use!"
+
+"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "We will not share this information with anyone, and your phone number will not appear on your personal homepage."
+
+"繼續" = "Continue"
+
+"檢查中..." = "Checking..."
+
+"請驗證你的手機號碼：\n%@ %@" = "Please verify your mobile number:\n%@ %@"
+
+"我們需要驗證 %@ %@ 是你的手機號碼" = "We need to verify that %@ %@ is your phone number"
+
+"確定" = "Confirm"
+
+"取消" = "Cancel"
