--- a/iOS/SwiftiDate/zh-Hans.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/zh-Hans.lproj/Localizable.strings
@@ -131,3 +131,23 @@
 "服務協議" = "服务协议"
 
 "隱私權政策" = "隐私权政策"
+
+"你的手機號碼是？" = "你的手机号码是？"
+
+"註冊或登錄需要輸入你的手機號碼" = "注册或登录需要输入你的手机号码"
+
+"請確認你的手機號碼為目前正在使用的手機號碼！" = "请确认你的手机号码为目前正在使用的手机号码！"
+
+"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "我们不会将该资讯分享给任何人，你的手机号码也不会出现在你的个人首页"
+
+"繼續" = "继续"
+
+"檢查中..." = "检查中..."
+
+"請驗證你的手機號碼：\n%@ %@" = "请验证你的手机号码：\n%@ %@"
+
+"我們需要驗證 %@ %@ 是你的手機號碼" = "我们需要验证 %@ %@ 是你的手机号码"
+
+"確定" = "确定"
+
+"取消" = "取消"
