--- a/iOS/SwiftiDate/zh-Hant.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/zh-Hant.lproj/Localizable.strings
@@ -131,3 +131,23 @@
 "服務協議" = "服務協議"
 
 "隱私權政策" = "隱私權政策"
+
+"你的手機號碼是？" = "你的手機號碼是？"
+
+"註冊或登錄需要輸入你的手機號碼" = "註冊或登錄需要輸入你的手機號碼"
+
+"請確認你的手機號碼為目前正在使用的手機號碼！" = "請確認你的手機號碼為目前正在使用的手機號碼！"
+
+"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁"
+
+"繼續" = "繼續"
+
+"檢查中..." = "檢查中..."
+
+"請驗證你的手機號碼：\n%@ %@" = "請驗證你的手機號碼：\n%@ %@"
+
+"我們需要驗證 %@ %@ 是你的手機號碼" = "我們需要驗證 %@ %@ 是你的手機號碼"
+
+"確定" = "確定"
+
+"取消" = "取消"
