feat(auth): 完成 Firebase 簡訊驗證流程
- 新增 OTPVerificationView，支援輸入與驗證 6 碼 OTP
- 整合 Firebase PhoneAuthProvider，完成發送與驗證流程
- 加入測試模式 (isAppVerificationDisabledForTesting) 以便開發
- 支援倒數計時與重新發送 OTP
- 驗證成功後導向真人認證畫面

--- a/iOS/SwiftiDate/en.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/en.lproj/Localizable.strings
@@ -116,38 +116,38 @@
 
 "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。" = "SwiftiDate is like a stage for you to strike up a conversation, giving you the opportunity to meet more high-quality partners. I hope that when you use \"Compliment\" and \"Super like\", you can find your own person just like you are brave enough to strike up a conversation in reality. happiness. ";
 
-"快速註冊新帳號" = "Quick Registration"
+"快速註冊新帳號" = "Quick Registration";
 
-"我已有賬號" = "I Have an Account"
+"我已有賬號" = "I Have an Account";
 
-"使用手機號碼登入" = "Login with Phone Number"
+"使用手機號碼登入" = "Login with Phone Number";
 
-"以此帳號登錄" = "Continue Account"
+"以此帳號登錄" = "Continue Account";
 
-"不是你？換個帳號" = "Not You? Switch Account"
+"不是你？換個帳號" = "Not You? Switch Account";
 
-"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate will not post on your Facebook"
+"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate will not post on your Facebook";
 
-"服務協議" = "Terms of Service"
+"服務協議" = "Terms of Service";
 
-"隱私權政策" = "Privacy Policy"
+"隱私權政策" = "Privacy Policy";
 
-"你的手機號碼是？" = "What's your phone number?"
+"你的手機號碼是？" = "What's your phone number?";
 
-"註冊或登錄需要輸入你的手機號碼" = "Registration or login requires entering your phone number"
+"註冊或登錄需要輸入你的手機號碼" = "Registration or login requires entering your phone number";
 
-"請確認你的手機號碼為目前正在使用的手機號碼！" = "Please confirm that your phone number is currently in use!"
+"請確認你的手機號碼為目前正在使用的手機號碼！" = "Please confirm that your phone number is currently in use!";
 
-"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "We will not share this information with anyone, and your phone number will not appear on your personal homepage."
+"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "We will not share this information with anyone, and your phone number will not appear on your personal homepage.";
 
-"繼續" = "Continue"
+"繼續" = "Continue";
 
-"檢查中..." = "Checking..."
+"檢查中..." = "Checking...";
 
-"請驗證你的手機號碼：\n%@ %@" = "Please verify your mobile number:\n%@ %@"
+"請驗證你的手機號碼：\n%@ %@" = "Please verify your mobile number:\n%@ %@";
 
-"我們需要驗證 %@ %@ 是你的手機號碼" = "We need to verify that %@ %@ is your phone number"
+"我們需要驗證 %@ %@ 是你的手機號碼" = "We need to verify that %@ %@ is your phone number";
 
-"確定" = "Confirm"
+"確定" = "Confirm";
 
-"取消" = "Cancel"
+"取消" = "Cancel";
