--- a/iOS/SwiftiDate/zh-Hant.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/zh-Hant.lproj/Localizable.strings
@@ -116,38 +116,38 @@
 
 "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。" = "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。";
 
-"快速註冊新帳號" = "快速註冊新帳號"
+"快速註冊新帳號" = "快速註冊新帳號";
 
-"我已有賬號" = "我已有賬號"
+"我已有賬號" = "我已有賬號";
 
-"使用手機號碼登入" = "使用手機號碼登入"
+"使用手機號碼登入" = "使用手機號碼登入";
 
-"以此帳號登錄" = "以此帳號登錄"
+"以此帳號登錄" = "以此帳號登錄";
 
-"不是你？換個帳號" = "不是你？換個帳號"
+"不是你？換個帳號" = "不是你？換個帳號";
 
-"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate 不會在你的 Facebook 上發文"
+"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate 不會在你的 Facebook 上發文";
 
-"服務協議" = "服務協議"
+"服務協議" = "服務協議";
 
-"隱私權政策" = "隱私權政策"
+"隱私權政策" = "隱私權政策";
 
-"你的手機號碼是？" = "你的手機號碼是？"
+"你的手機號碼是？" = "你的手機號碼是？";
 
-"註冊或登錄需要輸入你的手機號碼" = "註冊或登錄需要輸入你的手機號碼"
+"註冊或登錄需要輸入你的手機號碼" = "註冊或登錄需要輸入你的手機號碼";
 
-"請確認你的手機號碼為目前正在使用的手機號碼！" = "請確認你的手機號碼為目前正在使用的手機號碼！"
+"請確認你的手機號碼為目前正在使用的手機號碼！" = "請確認你的手機號碼為目前正在使用的手機號碼！";
 
-"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁"
+"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁";
 
-"繼續" = "繼續"
+"繼續" = "繼續";
 
-"檢查中..." = "檢查中..."
+"檢查中..." = "檢查中...";
 
-"請驗證你的手機號碼：\n%@ %@" = "請驗證你的手機號碼：\n%@ %@"
+"請驗證你的手機號碼：\n%@ %@" = "請驗證你的手機號碼：\n%@ %@";
 
-"我們需要驗證 %@ %@ 是你的手機號碼" = "我們需要驗證 %@ %@ 是你的手機號碼"
+"我們需要驗證 %@ %@ 是你的手機號碼" = "我們需要驗證 %@ %@ 是你的手機號碼";
 
-"確定" = "確定"
+"確定" = "確定";
 
-"取消" = "取消"
+"取消" = "取消";
