--- a/iOS/SwiftiDate/zh-Hans.lproj/Localizable.strings
+++ b/iOS/SwiftiDate/zh-Hans.lproj/Localizable.strings
@@ -116,38 +116,38 @@
 
 "SwiftiDate 就像是一個提供給您搭訕的舞台，讓您有機會結識更多優質的對象。希望您在運用「讚美」和「超級喜歡」時，能像現實中勇敢搭訕那樣，找到屬於自己的幸福。" = "SwiftiDate 就像是一个提供给您搭讪的舞台，让您有机会结识更多优质的对象。希望您在运用「赞美」和「超级喜欢」时，能像现实中勇敢搭讪那样，找到属于自己的幸福。 ";
 
-"快速註冊新帳號" = "快速注册新帐号"
+"快速註冊新帳號" = "快速注册新帐号";
 
-"我已有賬號" = "我已有账号"
+"我已有賬號" = "我已有账号";
 
-"使用手機號碼登入" = "使用手机号码登入"
+"使用手機號碼登入" = "使用手机号码登入";
 
-"以此帳號登錄" = "以此帐号登录"
+"以此帳號登錄" = "以此帐号登录";
 
-"不是你？換個帳號" = "不是你？换个帐号"
+"不是你？換個帳號" = "不是你？换个帐号";
 
-"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate 不会在你的 Facebook 上发文"
+"SwiftiDate 不會在你的 Facebook 上發文" = "SwiftiDate 不会在你的 Facebook 上发文";
 
-"服務協議" = "服务协议"
+"服務協議" = "服务协议";
 
-"隱私權政策" = "隐私权政策"
+"隱私權政策" = "隐私权政策";
 
-"你的手機號碼是？" = "你的手机号码是？"
+"你的手機號碼是？" = "你的手机号码是？";
 
-"註冊或登錄需要輸入你的手機號碼" = "注册或登录需要输入你的手机号码"
+"註冊或登錄需要輸入你的手機號碼" = "注册或登录需要输入你的手机号码";
 
-"請確認你的手機號碼為目前正在使用的手機號碼！" = "请确认你的手机号码为目前正在使用的手机号码！"
+"請確認你的手機號碼為目前正在使用的手機號碼！" = "请确认你的手机号码为目前正在使用的手机号码！";
 
-"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "我们不会将该资讯分享给任何人，你的手机号码也不会出现在你的个人首页"
+"我們不會將該資訊分享給任何人，你的手機號碼也不會出現在你的個人首頁" = "我们不会将该资讯分享给任何人，你的手机号码也不会出现在你的个人首页";
 
-"繼續" = "继续"
+"繼續" = "继续";
 
-"檢查中..." = "检查中..."
+"檢查中..." = "检查中...";
 
-"請驗證你的手機號碼：\n%@ %@" = "请验证你的手机号码：\n%@ %@"
+"請驗證你的手機號碼：\n%@ %@" = "请验证你的手机号码：\n%@ %@";
 
-"我們需要驗證 %@ %@ 是你的手機號碼" = "我们需要验证 %@ %@ 是你的手机号码"
+"我們需要驗證 %@ %@ 是你的手機號碼" = "我们需要验证 %@ %@ 是你的手机号码";
 
-"確定" = "确定"
+"確定" = "确定";
 
-"取消" = "取消"
+"取消" = "取消";
